#461 Velocity: Fix template bugs for migration

--- a/less/main/mixins.less
+++ b/less/main/mixins.less
@@ -367,7 +367,7 @@
 	.make-font-a-lot-smaller(@font__p--font-size);
 
 	.style--light & {
-		color: @contrast--light;
+		color: @color__p--text;
 	}
 
 	.style--accent & {
