--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -31,7 +31,7 @@
 	.clearfix();
 
 	.style--light & {
-        border-color: fade(@contrast--light, 75%);
+        border-color: @color-text--light;
     }
 
     .style--accent & {
@@ -115,7 +115,7 @@ a.twitter__account-link {
 	border-top: 1px solid @color-text--light;
 
 	.style--light & {
-        border-color: fade(@contrast--light, 75%);
+        border-color: @color-text--light;
     }
 
     .style--accent & {
@@ -139,7 +139,7 @@ a.twitter__account-link {
 		line-height: 1em;
 
 		.style--light & {
-	        color: fade(@contrast--light, 50%);
+	        color: fade(@color__p--text, 50%);
 	    }
 
 	    .style--accent & {
