--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -62,7 +62,7 @@
 		background-color: @color__ecomproductslist--background;
 
 		.style--light & {
-			background-color: @color--light;
+			background-color: @color__ecomproductslist--background;
 	    }
 
 	    .style--accent & {
@@ -93,7 +93,7 @@
 			background-color: @color__ecomproductslist--background;
 
 			.style--light & {
-				background-color: @color--light;
+				background-color: @color__ecomproductslist--background;
 		    }
 
 		    .style--accent & {
@@ -193,7 +193,7 @@
 		color: @color__ecomproductslist-label--text;
 
 		.style--light & {
-	        color: fade(@contrast--light, 90%);
+	        color: @color__ecomproductslist-label--text;
 	    }
 
 	    .style--accent & {
@@ -220,9 +220,9 @@
 		color: @color__ecomproductslist-label--text;
 
 		.style--light & {
-	        background-color: fade(@contrast--light, 5%);
-	        border-color: fade(@contrast--light, 75%);
-	        color: fade(@contrast--light, 90%);
+	        background-color: fade(@color__ecomproductslist-label--text, 20%);
+	        border-color: fade(@color__ecomproductslist-label--text, 75%);
+	        color: @color__ecomproductslist-label--text;
 	    }
 
 	    .style--accent & {
@@ -243,9 +243,9 @@
 			color: @color__p--text;
 
 			.style--light & {
-		        background-color: fade(@contrast--light, 5%);
-		        border-color: fade(@contrast--light, 75%);
-		        color: fade(@contrast--light, 90%);
+		        background-color: @color__form--background;
+		        border-color: fade(@color__form--border, 75%);
+		        color: @color__p--text;
 		    }
 
 		    .style--accent & {
@@ -266,9 +266,9 @@
 				color: @color__ecomproductslist-label--text;
 
 				.style--light & {
-			        background-color: fade(@contrast--light, 5%);
-			        border-color: fade(@contrast--light, 75%);
-			        color: fade(@contrast--light, 90%);
+			        background-color: fade(@color__ecomproductslist-label--text, 20%);
+			        border-color: fade(@color__ecomproductslist-label--text, 75%);
+			        color: @color__ecomproductslist-label--text;
 			    }
 
 			    .style--accent & {
@@ -289,7 +289,7 @@
 			color: @color__ecomproductslist-label--text;
 
 			.style--light & {
-		        color: fade(@contrast--light, 90%);
+		        color: @color__ecomproductslist-label--text;
 		    }
 
 		    .style--accent & {
@@ -304,7 +304,7 @@
 				color: @color__p--text;
 
 				.style--light & {
-			        color: fade(@contrast--light, 90%);
+			        color: @color__p--text;
 			    }
 
 			    .style--accent & {
@@ -319,7 +319,7 @@
 					color: @color__ecomproductslist-label--text;
 
 					.style--light & {
-				        color: fade(@contrast--light, 90%);
+				        color: @color__ecomproductslist-label--text;
 				    }
 
 				    .style--accent & {
@@ -336,7 +336,7 @@
 				background-color: @color__ecomproductslist--background;
 
 				.style--light & {
-			        color: @color--light;
+			        background-color: @color__ecomproductslist--background;
 			    }
 
 			    .style--accent & {
@@ -351,7 +351,7 @@
 					color: @color__p--text;
 
 					.style--light & {
-				        color: fade(@contrast--light, 90%);
+				        color: @color__p--text;
 				    }
 
 				    .style--accent & {
@@ -512,7 +512,7 @@
                 margin-left: 0;
 
                 .style--light & {
-			        color: @contrast--accent;
+			        color: @color__button--text;
 			    }
 
 			    .style--accent & {
@@ -647,8 +647,8 @@
 	padding: 20px 70px;
 
 	.style--light & {
-		border-bottom-color: fade(@contrast--light, 16%);
-        color: fade(@contrast--light, 80%);
+		border-bottom-color: fade(@color__p--text, 16%);
+        color: fade(@color__p--text, 80%);
     }
 
     .style--accent & {
@@ -776,7 +776,7 @@
 	font-size: 0;
 
 	.style--light & {
-        background-color: @color--light;
+        background-color: @color__ecomproductslist-product-item--background;
     }
 
     .style--accent & {
@@ -842,7 +842,7 @@
 		hyphens: none;
 
 		.style--light & {
-	        color: fade(@contrast--light, 90%);
+	        color: @color__ecomproductslist-product-title--text;
 	    }
 
 	    .style--accent & {
@@ -861,7 +861,7 @@
 			color: @color__p--text;
 
 			.style--light & {
-		        color: fade(@contrast--light, 90%);
+		        color: @color__p--text;
 		    }
 
 		    .style--accent & {
@@ -876,7 +876,7 @@
 				color: @color__ecomproductslist-product-title--text;
 
 				.style--light & {
-			        color: fade(@contrast--light, 90%);
+			        color: @color__ecomproductslist-product-title--text;
 			    }
 
 			    .style--accent & {
@@ -898,7 +898,7 @@
 	color: @color__ecomproductslist-product-title--text;
 
 	.style--light & {
-        color: fade(@contrast--light, 90%);
+        color: @color__ecomproductslist-product-title--text;
     }
 
     .style--accent & {
@@ -914,7 +914,7 @@
 		color: @color__p--text;
 
 		.style--light & {
-	        color: fade(@contrast--light, 90%);
+	        color: @color__p--text;
 	    }
 
 	    .style--accent & {
@@ -930,7 +930,7 @@
 			color: @color__ecomproductslist-product-title--text;
 
 			.style--light & {
-		        color: fade(@contrast--light, 90%);
+		        color: @color__ecomproductslist-product-title--text;
 		    }
 
 		    .style--accent & {
