#461 Velocity: Fix template bugs for migration

--- a/less/main/messages.less
+++ b/less/main/messages.less
@@ -91,7 +91,7 @@
 	background-color: @message-color--error;
 
 	&:before {
-		content: "\f12a";
+		content: '\f12a';
 	}
 }
 
@@ -101,7 +101,7 @@
 	background-color: @message-color--warning;
 
 	&:before {
-		content: "\f071";
+		content: '\f071';
 	}
 }
 
@@ -111,7 +111,7 @@
 	background-color: @message-color--information;
 
 	&:before {
-		content: "\f129";
+		content: '\f129';
 	}
 }
 
@@ -121,7 +121,7 @@
 	background-color: @message-color--success;
 
 	&:before {
-		content: "\f00c";
+		content: '\f00c';
 	}
 }
 
@@ -131,7 +131,7 @@
 	background-color: @message-color--not-found;
 
 	&:before {
-		content: "\f002";
+		content: '\f002';
 	}
 }
 
