--- a/less/plugins/blog/blog-post-list.less
+++ b/less/plugins/blog/blog-post-list.less
@@ -226,7 +226,7 @@ a.blogpostlist__read-more {
 	// Line
 	
 	&:before {
-		content: "";
+		content: '';
 		position: absolute;
 		top: 4.5em;
 		left: 50%;
