--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -41,7 +41,7 @@
 		}
 
 		&:after {
-			content: "";
+			content: '';
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -96,7 +96,7 @@
 	padding-bottom: 5em !important;
 	
 	&:after {
-		content: "";
+		content: '';
 		position: absolute;
 		left: 50%;
 		bottom: -2em;
@@ -111,7 +111,7 @@
 			&:before {
 				position: absolute;
 				margin-left: -2em;
-				content: "\2014";
+				content: '\2014';
 			}
 		}
 	}
@@ -159,7 +159,7 @@
 	}
 		
 	&:before {
-		content: "";
+		content: '';
 		position: absolute;
 		top: 100%;
 		bottom: -75px;
