--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -178,7 +178,7 @@ textarea {
     }
 
     &:after {
-		content: "";
+		content: '';
 		cursor: pointer;
 		position: absolute;
 		top: 0;
@@ -418,7 +418,7 @@ input:focus {
 				
 				&:before,
 				&:after {
-					content: " ";
+					content: ' ';
 					cursor: pointer;
 					position: absolute;
 					top: 0.75em;
