--- a/less/widgets/language-selector.less
+++ b/less/widgets/language-selector.less
@@ -69,13 +69,13 @@
 		height: 2.5em;
 		
     	&:before {
-    	    content: "";
+    	    content: '';
             display: block;
     	    height: @font__button--line-height;
     	}
 		
     	&:after {
-    	    content: "";
+    	    content: '';
             display: block;
     	}
 
