--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -183,7 +183,7 @@ a.companyname {
 		&:before,
 		&:hover:after,
 		&:hover:before {
-			content: "";
+			content: '';
 			height: 3px;
 			width: 28px;
 			position: absolute;
@@ -359,7 +359,7 @@ a.companyname {
 		}
 		
 		&:after {
-			content: "";
+			content: '';
 			display: block;
 		}
 		
@@ -397,7 +397,7 @@ a.companyname {
 		padding-right: 2.25em;
 		
 		&:after {
-			content: "";
+			content: '';
 			position: absolute;
 			top: 50%;
 			right: 0.75em;
@@ -501,7 +501,7 @@ a.companyname {
 	.transition(all 0.25s ease-in-out 0s);
 	
 	&:after {
-		content: " ";
+		content: ' ';
 		position: absolute;
 		bottom: 0;
 		left: 0.5em;
