--- a/less/plugins/plugins.less
+++ b/less/plugins/plugins.less
@@ -119,11 +119,11 @@ a.tag-link,
 		padding: 0.5em 1em;
 		
 		&.icon--previous:before {
-			content: "\f053";
+			content: '\f053';
 		}
 		
 		&.icon--next:after {
-			content: "\f054";
+			content: '\f054';
 		}
 		
 		&:before {
