--- a/less/widgets/twitter-feed.less
+++ b/less/widgets/twitter-feed.less
@@ -95,11 +95,11 @@ a.twitter__account-link {
 	}
 	
 	&:before {
-		content: "\201c";
+		content: '\201c';
 	}
 	
 	&:after {
-		content: "\201d";
+		content: '\201d';
 	}
 }
 
