--- a/less/widgets/yelp-review.less
+++ b/less/widgets/yelp-review.less
@@ -17,6 +17,18 @@
 	&__author-label {
 		font-size: 0.7em;
 		color: fade(@color__p--text, 50%);
+
+		.style--light & {
+			color: fade(@color__p--text, 50%);
+	    }
+
+	    .style--accent & {
+	        color: darken(@color--accent, 20%);
+	    }
+
+	    .style--dark & {
+	        color: darken(@color--accent, 20%);
+	    }
 	}
 	
 	&__review-author {
